load("//rules/spinnaker:spinnaker_pipeline.bzl", "spinnaker_pipeline")

spinnaker_pipeline(
    name = "spinnaker-config-production",
    app_config = "app-config.yaml",
    pipeline_configs = ["prod.yaml"],
    visibility = ["//visibility:public"],
)

spinnaker_pipeline(
    name = "spinnaker-config-staging",
    app_config = "app-config.yaml",
    pipeline_configs = ["staging.yaml"],
    visibility = ["//visibility:public"],
)
